sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but 'else' found.
			echange(i,i+1) } else {x = false}
                                         ^